--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mui/material": "^5.14.1",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.2.0",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-intl": "^6.4.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
